@startuml ChronoLog

title ChronoLog System Overview

skinparam monochrome true
skinparam shadowing false

package "Config" {
    class Config {
        ROOT
        INPUT_DIR
        OUTPUT_DIR
        DEFAULT_INPUT_FILE
        INPUT_FILE_PATH
        OUTPUT_PATH
        CHUNK_SIZE
        QUEUE_MAX_SIZE
        POLL_INTERVAL
        NUM_PROCESSES
        WRITER_FLUSH_INTERVAL
        QUEUE_PUT_TIMEOUT
        TRACK_VARIABLES
        VAR_REGEX
        KEY_VAL_RE
    }
}

package "Reader" {
    class FileChunkReader {
        file_path
        chunk_size
        poll_interval
        eof_reached
        live
        __iter__()
        _read_chunk()
    }
}

package "Parsing" {
    class LogParser {
        var_regex
        key_val_re
        parse_lines()
        extract_timestamp()
        parse_errors_warnings()
        parse_variables()
        _add_event()
    }
}

package "Processing" {
    class LogProcessor {
        input_file
        num_processes
        parser
        queue
        stop_flag
        start()
        _on_result()
        _safe_queue_put()
        _on_error()
        _handle_interrupt()
        _shutdown()
    }
}

package "Database" {
    class SQLConnection {
        connection_string
        get_connection()
        execute_query()
        execute_non_query()
        execute_sp()
        _ensure_database_exists()
    }

    class ChronoLogFacade {
        db
        get_messages()
        get_or_create_message_id()
        insert_timeline_event()
        bulk_insert_timeline_events()
        get_timeline_page()
        get_summary()
        get_timeseries()
    }
}

package "Writer" {
    class WriterProcess {
        flush_interval
        facade
        msg_cache
        run()
        _process_queue()
        _prepare_entry()
    }
}

package "API" {
    class FlaskApp {
        get_summary()
        get_timeline()
        get_timeseries()
        get_messages()
    }
}

package "CLI" {
    class CLI {
        check_env()
        check_db_connection()
        check_input_files()
        cmd_check()
        cmd_setup()
        cmd_generate_logs()
        cmd_run_processor()
        cmd_run_api()
        cmd_auto()
        main()
    }
}

Config --> FileChunkReader : provides constants
Config --> LogParser : provides regex

LogProcessor --> LogParser : _on_result() uses parse_lines()
LogProcessor --> FileChunkReader : start() iterates
LogProcessor --> WriterProcess : start() spawns
LogProcessor --> multiprocessing.Queue : uses

WriterProcess --> ChronoLogFacade : _process_queue() calls bulk_insert_timeline_events()
ChronoLogFacade --> SQLConnection : all methods use execute_sp()

CLI --> LogProcessor : cmd_run_processor() calls start()
CLI --> FlaskApp : cmd_run_api() starts app
CLI --> SQLConnection : check_db_connection() uses get_connection()

FlaskApp --> ChronoLogFacade : route handlers call facade methods

@enduml